test/integration/assets/compile_error/no_nif.exs
defmodule ZiglerTest.CompileError.NoNif do
  use Zigler
end
